--- a/styles/constants/_colors.scss
+++ b/styles/constants/_colors.scss
@@ -1,7 +1,7 @@
 $black: #000000;
 $grey-deep: #191a20;
 $grey-primary: #3f4150;
-$grey-second: #8c8d96;
+$grey-secondary: #8c8d96;
 $grey-info: #b2b3b9;
 $grey-border: #e0e2e7;
 $grey-bg: #f7f8fa;
