--- a/styles/constants/_colors.scss
+++ b/styles/constants/_colors.scss
@@ -1,13 +1,13 @@
 $black: #000000;
-$grey-deep: #191a20;
-$grey-primary: #3f4150;
-$grey-secondary: #8c8d96;
-$grey-info: #b2b3b9;
-$grey-border: #e0e2e7;
-$grey-bg: #f7f8fa;
+$dark: #191a20;
+$primary: #3f4150;
+$secondary: #8c8d96;
+$tertiary: #b2b3b9;
+$border: #e0e2e7;
+$background: #f7f8fa;
 $white: #ffffff;
 $blue: #3da5f5;
-$deepblue: #3186c4;
-$lightblue: #ecf6fe;
-$pink: #f86d7d;
+$blue-dark: #3186c4;
+$blue-light: #ecf6fe;
+$red: #f86d7d;
 $green: #22c58b;
