💄 Implement price compinent & update code

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,6 +18,7 @@
 @import './modules/tags';
 @import './modules/avatars';
 @import './modules/start-rating';
+@import './modules/prices';
 
 /* 레이아웃 설정 */
 @import './layouts/grids';
