💄 Implement pagination and forms

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,5 +20,7 @@
 @import './modules/start-rating';
 @import './modules/prices';
 @import './modules/buttons';
+@import './modules/forms';
+@import './modules/pagination';
 /* 레이아웃 설정 */
 @import './layouts/grids';
