--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,7 @@
 @import './base/fonts';
 @import './base/normalize';
 @import './base/reset';
+@import './base/globals';
 
 /* 믹스인 설정 */
 @import './mixins/text-style';
