--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,5 +23,6 @@
 @import './modules/buttons';
 @import './modules/forms';
 @import './modules/pagination';
+@import './modules/icons';
 /* 레이아웃 설정 */
 @import './layouts/grids';
